<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.pii_input.PIIInputActivity">

    <data>
        <variable
            name="viewModel"
            type="com.as1nkr0n8.pii_verification.ui.pii_input.PIIInputViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/top_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico"
            android:padding="4dp"
            android:text="@string/top_text"
            android:textColor="?attr/color"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@id/title_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/black_han_sans"
            android:padding="20dp"
            android:text="@string/title"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/pan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_text"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/pan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/pan_text"
            app:layout_constraintBottom_toTopOf="@id/pan_text_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pan_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pan"
            android:paddingHorizontal="16dp"
            app:layout_constraintBottom_toTopOf="@id/birth_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pan">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pan_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapCharacters"
                android:nextFocusForward="@id/day_edit_text"
                android:text="@={viewModel.panInputText}"
                android:afterTextChanged="@{()->viewModel.isPANValid()}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/birth_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/birth_date"
            app:layout_constraintBottom_toTopOf="@id/date_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pan_text_field"
            app:layout_constraintVertical_bias="0.2" />

        <LinearLayout
            android:id="@+id/date_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintBottom_toTopOf="@id/detail_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/birth_date"
            app:layout_constraintVertical_bias="0.2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/day_text_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:hint="@string/day"
                android:paddingStart="16dp"
                android:paddingEnd="4dp"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/day_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="2"
                    android:nextFocusForward="@id/month_edit_text"
                    android:text="@={viewModel.dayInputText}"
                    android:afterTextChanged="@{()->viewModel.isDayValid()}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/month_text_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:hint="@string/month"
                android:paddingHorizontal="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/month_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="2"
                    android:nextFocusForward="@id/year_edit_text"
                    android:text="@={viewModel.monthInputText}"
                    android:afterTextChanged="@{()->viewModel.isMonthValid()}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/year_text_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:hint="@string/year"
                android:paddingStart="4dp"
                android:paddingEnd="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/year_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="4"
                    android:text="@={viewModel.yearInputText}"
                    android:afterTextChanged="@{()->viewModel.isYearValid()}"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/detail_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="bottom"
            android:padding="16dp"
            android:text="@string/detailed_info"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_input" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:enabled="@{viewModel.isNextEnabled}"
            android:onClick="@{()->viewModel.onNextClicked()}"
            android:text="@string/next"
            app:layout_constraintBottom_toTopOf="@id/no_pan_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/no_pan_text"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.onNoPANClicked()}"
            android:text="@string/no_pan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/next_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>